--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,17 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.8.0"
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/icone/icon.png"
+  image_path_android: "assets/icone/icon.png"
+  adaptive_icon_background: "assets/icone/background.png"
+  adaptive_icon_foreground: "assets/icone/foreground.png"  
 flutter:
   uses-material-design: true
 
